--- a/her-marketplace/package.json
+++ b/her-marketplace/package.json
@@ -14,7 +14,7 @@
     "@openzeppelin/contracts": "^4.7.2",
     "axios": "^0.27.2",
     "chai": "^4.3.6",
-    "ethereum-waffle": "^3.4.4",
+    "dotenv": "^16.0.1",
     "ethers": "^5.6.9",
     "hardhat": "^2.10.1",
     "ipfs-http-client": "^57.0.3",
@@ -24,6 +24,8 @@
     "web3modal": "^1.9.8"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.2",
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "autoprefixer": "^10.4.8",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
